# ouvrage

./: .dockerignore  .env.example  .fetch-test  .gitignore  .mailmap  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.runtimes  HANDOFF.md  LICENSE  Makefile  RCA-worktree-bare-config.md  README.md  RENAME_PROJECT_PLAN.md  RUNTIMES.md  SECURITY.md  analysis-close-vs-cancel.md  audit-file-storage-and-search.md  audit-report.md  auth.py  chain_test_artifact.txt  conftest.py  cutover.md  dashboard_api.py  database.py  deploy-jonathan.sh  deploy.sh  dev-start.sh  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  embedding_service.py  foreman.html  gate-pipeline-audit.md  get-guide-v2.md  index.html  install.sh  lifecycle-consolidation-audit.md  (+20 more)
.claude/: settings.json
.switchboard/: session.jsonl
dashboard/: api.js  app.js  foreman-app.js  foreman-shell.js  index.html  ouvrage-app.js  ouvrage-shell.js  router.js  style.css  sw.js  tokens.js
docker/: Dockerfile.dev
docs/: README.md  context-engineering.md  dashboard-spec.md  migration-from-authelia.md  overview.md  prompt-engineering.md  security-and-isolation.md  task-lifecycle.md
hooks/: block-git-fetch.sh  block-git-push.sh
ouvrage/: __main__.py  crypto.py  logging_config.py  migrate.py
poems/: smoke-test-sonnet.txt
scripts/: analyze_test_coverage.py  backfill_embeddings.py  delete_redundant_tests.py  generate_vapid.py  take-conv-screenshots.py  take-index-toc-screenshots.py  visual-check.py  visual-config.json
switchboard/: __main__.py  crypto.py  logging_config.py  migrate.py
tests/: conftest.py  test_aiosqlite_daemon_patch.py  test_anthropic_proxy.py  test_attempt_outcomes.py  test_audit_log.py  test_auth_hardening.py  test_auth_migration.py  test_auth_mode.py  test_auto_merge.py  test_bitbucket_provider.py  test_cache_tokens.py  test_canonical_task_url.py  test_chunks.py  test_cleanup_branch.py  (+106 more)
(+227 files in other folders)
