[project]
name = "switchboard"
version = "0.1.0"
description = "Shared message board MCP server for async communication between Claude AI and Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.11.0",
    "claude-agent-sdk>=0.1.0",
    "pywebpush>=2.0.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
