[project]
name = "ouvrage"
version = "0.1.0"
description = "AI task orchestration platform — dispatches autonomous Claude Code workers to git repos with test/review gates"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.11.0",
    "claude-agent-sdk>=0.1.0",
    "pywebpush>=2.0.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "authlib>=1.3.0",
    "argon2-cffi>=23.1.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "pytest-timeout>=2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
